--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "use-immer": "^0.10.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
