--- a/client/package.json
+++ b/client/package.json
@@ -22,15 +22,21 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.8"
+    "tailwindcss": "^3.4.8",
+    "typescript-eslint": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint ./src --fix"
   },
   "proxy": "http://localhost:3000",
   "eslintConfig": {
