--- a/client/package.json
+++ b/client/package.json
@@ -25,9 +25,11 @@
     "@eslint/js": "^9.9.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.8",
     "typescript-eslint": "^8.1.0"
   },
@@ -36,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint ./src --fix"
+    "prettylint": "npx eslint ./src --fix && npx prettier ./src --write"
   },
   "proxy": "http://localhost:3000",
   "eslintConfig": {
